--- a/profil.html
+++ b/profil.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
+<!-- File profil.html adalah file yang mendefinisikan struktur konten untuk halaman profil -->
+
 <html>
    <head>
-      <title>This is my web!</title>
-      <!-- <meta charset="UTF-8"> -->
+      <title>Selamat datang!</title>
+      <meta charset="UTF-8">
    </head>
 
    <body>
-      Welcome to HTML Course!
+      <img src="https://raw.githubusercontent.com/nurulq/ppw_j_1516/master/profil.JPG" alt='its "aaaa" me!' width="100" height="100"> <br>
+
+      <a href="http://www.google.com">Tentang Saya</a> &nbsp; 
+      <a href="story.html">Cerita Saya</a> &nbsp; 
+      <a href="">Hubungi Saya</a>
    </body>
 </html>
