--- a/story.html
+++ b/story.html
@@ -1,17 +1,74 @@
 <!DOCTYPE html>
 
-<html>
-   <head>i
-      <title>Cerita Saya</title>
-   </head>
-   <body>
-      <h1>Favourite Web</h1>
+<!-- File profil.html adalah file yang mendefinisikan struktur konten untuk halaman profil -->
 
-      <ol>
-         <li> <a href="http://facebook.com">Facebook</a>
-	 <ul>
-	 <li><a href="http://google.com">Google</a></li></ul>
-	 </li>
-      </ol>
+<html>
+   <head>
+      <title>Selamat datang!</title>
+      <meta charset="UTF-8">
+   </head>
+
+   <body>
+
+
+      <div class="header">
+
+         <div class="logo" style="float:left;border-style:solid;">
+	    <img src="logo.png" alt="logo" width="100">
+	 </div>
+
+	 <div class="webtitle" style="float:right;border-style:solid;">
+	    <h1>SimmieMinyBloggi</h1>
+	 </div>
+
+      </div>
+
+
+      <div class="body" style="clear:both;">
+
+         <div class="menu-bar-vertical" style="float:left;border-style:solid;">
+	    MENU-BAR
+	 </div>
+
+	 <div class="content" style="float:right;border-style:solid;">
+
+	    <div class="img-id" style="float:left;">
+	       <img src="profil.jpg" alt="it's me" width="80" height="98">
+
+	       <table>
+	          <tr>
+		     <td>Nama</td>
+		     <td>Ruby si Rubah</td>
+		  </tr>
+		  <tr>
+		     <td>Domisili</td>
+		     <td>Depok</td>
+		  </tr>
+		  <tr>
+		    <td>Interest</td>
+		    <td>Makanan</td>
+		  </tr>
+	       </table>
+	    </div>
+
+	    <div class="tab-content" style="float:right;">
+	       <a href="profil.html">About me</a> &nbsp;
+	       <a href="story.html">My story</a> &nbsp;
+	       <a href="contact.html">Contact me</a> &nbsp;
+
+	       <br>
+
+	       <p>Semangat belajar HTML dan CSS agar bisa membuat web yang bagus!</p>
+	    </div>
+	 </div>
+
+      </div>
+
+
+      <div class="footer" style="clear:both;border-style:solid;">
+         footer
+      </div>
+
+
    </body>
 </html>
