--- a/contact.html
+++ b/contact.html
@@ -27,10 +27,16 @@
       <div class="body" style="clear:both;">
 
          <div class="menu-bar-vertical" style="float:left;border-style:solid;">
-	    MENU-BAR
+	    <h3>HOME</h3>
+	    <h3>PROFIL</h3>
+	    <ul>
+	       <li>About me</li>
+	       <li>My Story</li>
+	       <li>Contact me</li>
+	    </ul>
 	 </div>
 
-	 <div class="content" style="float:right;border-style:solid;">
+	 <div class="content" style="float:right;">
 
 	    <div class="img-id" style="float:left;">
 	       <img src="profil.jpg" alt="it's me" width="80" height="98">
@@ -58,15 +64,28 @@
 
 	       <br>
 
-	       <p>Semangat belajar HTML dan CSS agar bisa membuat web yang bagus!</p>
+	       <form>
+	          <label>Nama</label>
+	          <input type="text"><br>
+
+		  <label>Email</label>
+		  <input type="text"><br>
+
+		  <label>Pesan</label>
+		  <textarea rows="3" cols="30"></textarea><br>
+
+		  <button type="submit">Kirim</button>
+	       
+	       </form>
+
 	    </div>
 	 </div>
 
       </div>
 
 
-      <div class="footer" style="clear:both;border-style:solid;">
-         footer
+      <div class="footer" style="clear:both;border-top:solid;">
+         ppw @ 2016
       </div>
 
 
