--- a/profil.html
+++ b/profil.html
@@ -27,7 +27,13 @@
       <div class="body" style="clear:both;">
 
          <div class="menu-bar-vertical" style="float:left;border-style:solid;">
-	    MENU-BAR
+	    <h3>HOME</h3>
+	    <h3>PROFIL</h3>
+	    <ul>
+	       <li>About me</li>
+	       <li>My Story</li>
+	       <li>Contact me</li>
+	    </ul>
 	 </div>
 
 	 <div class="content" style="float:right;border-style:solid;">
@@ -66,7 +72,7 @@
 
 
       <div class="footer" style="clear:both;border-style:solid;">
-         footer
+         ppw @ 2016
       </div>
 
 
